# ai-tools

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  index.html
.ai-auto-order/: order_engine.py
.ai-auto-order/delivery/: delivery_pipeline.py
.ai-auto-order/hermes_loop/: hermes_log.jsonl  hermes_loop.py
.ai-auto-order/payment/: chain_scanner.py  unique_amount.py
.ai-auto-order/rules/: acceptance_rules.yaml  pricing_rules.yaml  rejection_rules.yaml
.ai-free-cloud-orchestrator/registry/: agents.yaml  platforms.yaml  quotas.yaml  task_whitelist.yaml  validate_yaml.py
.github/workflows/: ci.yml
.hermes-revenue-agents/ip_protection/: source_ip_protection.py
.hermes-revenue-agents/master/: agent_specs.json  audit.jsonl  kill_log.json  master_controller.py  state.json
.hermes-revenue-agents/performance/: _smoke_test.py  agent_scorecard.py  agent_scorecard_example.json  anomaly_detector.py  anti_gaming_checker.py  anti_gaming_rules.yaml  audit_evidence_collector.py  demotion_engine.py  incentive_engine.py  promotion_engine.py  score_rules.yaml  scoring_engine.py
agents/: DEPLOYMENT_GUIDE.md  agent_cloudflare.js  agent_colab.py  agent_factory.py  agent_github_actions.py  agent_pythonanywhere.py
ai-dev-tools/: pyproject.toml
ai-dev-tools/ai_dev_tools/: __init__.py  cli.py  demo.py  launcher.py  pricing.py  tracker.py
docs/: published-article.md
docs-site/: index.html
repo_outreach/: __init__.py  diagnosis_generator.py  find_targets.py  outreach_log.jsonl  outreach_message_generator.py  repo_scorer.py
(+13 files in other folders)
